<resources>
    <string name="app_name">Sin Barreras UDB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="second_group_menu">Aplicación</string>
    <string name="menu_start">Inicio</string>
    <string name="menu_levels">Niveles</string>
    <string name="menu_exercises">Ejercicios</string>
    <string name="menu_notes">Mis notas</string>
    <string name="menu_settings">Ajustes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
