<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/inicio"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_levels"
            android:icon="@drawable/niveles"
            android:title="@string/menu_levels" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ejercicios"
            android:title="@string/menu_exercises" />

    </group>

    <item android:title="@string/second_group_menu">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ajustes"
                android:title="@string/menu_settings" />

        </menu>
    </item>

</menu>
